# HeyEdit

./: .gitignore  .npmrc  LICENSE  README.md  build.ps1  dev.ps1  index.html  package.json  pnpm-lock.yaml  release.ps1
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  setup.rs  tray.rs
src-tauri/src/commands/: autostart.rs  config.rs  file.rs  mod.rs  system.rs  updater.rs  window.rs
src/components/: ErrorBoundary.tsx
src/components/editor/: EditorToolbar.tsx  MarkdownEditor.tsx
src/components/header/: AppHeader.tsx
src/components/layouts/: FullScreenLayout.tsx  HeaderLayout.tsx  LayoutProvider.tsx  SidebarHeaderLayout.tsx  SidebarLayout.tsx  index.ts
src/components/sidebar/: AppSidebar.tsx  FileSidebar.tsx
src/components/titlebar/: Titlebar.tsx
src/components/ui/: switch.tsx  toast.tsx  tooltip.tsx
src/hooks/: use-Log.ts  use-clipboard.ts  use-keyboard-shortcut.ts  use-notification.ts
src/lib/: commands.ts  file-system.ts  i18n.ts  types.ts
src/locales/: en.json  zh.json
src/pages/: AboutPage.tsx  ClipboardPage.tsx  DashboardPage.tsx  EditorPage.tsx  LayoutPage.tsx  NotificationsPage.tsx  SettingsPage.tsx  ShortcutsPage.tsx
src/stores/: config-store.ts  editor-store.ts  theme-store.ts
src/styles/: editor.css  theme.css
