[package]
name = "heyedit"
version = "0.1.6"
edition = "2021"
description = "HeyEdit - A clean, fast Markdown editor"

[lib]
name = "heyedit_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "heyedit"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = ["protocol-asset", "tray-icon", "custom-protocol"] }
tauri-plugin-autostart = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-log = "2.2.0"
tauri-plugin-notification = "2.2.2"
tauri-plugin-os = "2.2.1"
tauri-plugin-process = "2.2.0"
tauri-plugin-shell = "2.2.2"
tauri-plugin-store = "2.2.0"
tauri-plugin-updater = "2.2.0"
tauri-plugin-window-state = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
encoding_rs = "0.8"
chardetng = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]


